added profile edit

--- a/com.kodbook/src/main/resources/application.properties
+++ b/com.kodbook/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/kodbook
+spring.datasource.url=jdbc:mysql://localhost/kb
 spring.datasource.username= root
 spring.datasource.password= A9861@wini#
 spring.jpa.hibernate.ddl-auto=update
